--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    background-color: #20a6ff;
+    background-color: #9ca6ad;
     text-align: center;
 }
 
